
@todo .. Add Form_controller (Global) tutorial to user guide .. create a directory called /forms
then create a Form_controller to /parents folder. add common functions to Form controller.

@todo .. change htaccess rules in userguide DirectoryIndex index.php, index.html
@todo .. Global controllers pattern extends rules ..!!!
@todo .. put archived doc meta tag to old user guide base layout ..
$todo .. look at globally set database object from app_controller.
@todo .. upload class security fix

@next version todo .. add $this->config->set_item('log_threshold', 1); to log helper, we will control it in app_controller
@next version todo .. zend and kohana libraries load support (important)
@next version todo .. add LOG users messages level '5' => 'REPORT', , change fopen write log, add error_log() func. 
@next version todo .. logging for exceptions, exception reports
@next version todo .. driver files for security helper.. xss functions .. i_post('', callback_func);
@next version todo .. memcache or shmop session memory container.
@next version todo .. db_item() function should be set in config class, so user can change database config 
items globally like this in global_controller ..
$this->config->set_db_item();
@next version todo .. add user_guide pages to svn as static html.
@next version todo .. add $this->db->get_sql() for output "raw sql".
@next add user_guide pages to svn as static html.
@next version todo .. pager class
@next version todo .. active record union possibility ?
@next version todo .. http://stackoverflow.com/questions/1319611/zend-framework-select-objects-and-union
@next version todo .. datamapper class
@next version todo .. add set_callback('function', param1, param1..) instead of set_rules('|callback_function')
@next version todo .. firewall class (integer, string validate for requests, login attempts for captcha) 
@next version todo .. firewall class, or any php errors should be show an error inside view() function... blabla