@@ -10,7 +10,7 @@ Class Start extends Controller {
     }                                      
     
     public function index()
-    {  
+    {          
         $this->title = 'Welcome to Obullo Framework !';
         
         $data['var'] = 'This page generated by Obullo Framework.';  
