@@ -7,7 +7,8 @@ Class __autoloader extends App_controller
     function __autoloader()
     {         
         parent::__autoloader();
-        loader::base_helper('head_tag');  
+        loader::base_helper('head_tag');
+        
     } 
 }
 
