@@ -71,9 +71,10 @@ then create a Form_controller to /parents folder. add common functions to Form c
 @todo .. change htaccess rules in userguide DirectoryIndex index.php, index.html
 @todo .. Global controllers pattern extends rules ..!!!
 @todo .. put archived doc meta tag to old user guide base layout ..
-$todo .. look at globally set database object from app_controller.
-@todo .. upload class security fix
+@todo .. look at globally set database object from app_controller.
+@todo .. upload class security fix                                                    
 
+@next version todo .. implement Parser and Agent Class as Php5 and move them into /php5 folder.
 @next version todo .. add $this->config->set_item('log_threshold', 1); to log helper, we will control it in app_controller
 @next version todo .. zend and kohana libraries load support (important)
 @next version todo .. add LOG users messages level '5' => 'REPORT', , change fopen write log, add error_log() func. 
